--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Loan Prediction Application</h1>
+        <h1>Loan Application</h1>
 
         <!-- Introductory Text Section -->
         <div class="intro-text">
